--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,2 +1,2 @@
-<canvas id="canvas" width="600" height="600">
+<canvas id="canvas" width="1200" height="600" style="width: 1200px; height: 600px;">
 </canvas>
